--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ div.box h3+p {
  .container .box+li {
   background-color: cadetblue;
 }
-.texture {
+body {
   position: fixed;
   z-index: -1;
   top: 0;
